# ee-eq-cli

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md
src/: app_metadata.hpp  cli_args.cpp  cli_args.hpp  convolver_host.cpp  convolver_host.hpp  daemon_backend.cpp  daemon_backend.hpp  daemon_controller.cpp  daemon_controller.hpp  daemon_ipc.cpp  daemon_ipc.hpp  daemon_protocol.cpp  daemon_protocol.hpp  ee_eq_preset_parser.cpp  ee_eq_preset_parser.hpp  kernel_resolver.cpp  kernel_resolver.hpp  logging.hpp  lsp_eq_port_mapper.cpp  lsp_eq_port_mapper.hpp  lsp_labels.hpp  lsp_limiter_port_mapper.cpp  lsp_limiter_port_mapper.hpp  lv2_host_core.cpp  lv2_host_core.hpp  main.cpp  math_utils.hpp  pipewire_router.cpp  pipewire_router.hpp  preset_source.cpp  preset_source.hpp  tags_equalizer.hpp
tests/: test_daemon.cpp  test_main.cpp
tests/fixtures/: Anker Soundcore Life Q20.txt  CREDITS  Samsung Galaxy Buds Pro 2.txt  Sony MH755.txt
